--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,10 +1,8 @@
 <h2>Your Projects</h2>
 <ul class="projects">
-    <li *ngFor="let project of projects"
-        [class.selected]="project === selectedProject"
-        (click)="onSelect(project)">
-        <span class="badge">{{project.id}}</span> {{project.name}}
+    <li *ngFor="let project of projects">
+        <a routerLink="/detail/{{project.id}}">
+            <span class="badge">{{project.id}}</span> {{project.name}}
+        </a>
     </li>
 </ul>
-
-<app-project-detail [project]="selectedProject"></app-project-detail>
