--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -2,7 +2,7 @@
 <ul class="projects">
     <li *ngFor="let project of projects">
         <a routerLink="/detail/{{project.id}}">
-            <span class="badge">{{project.id}}</span> {{project.name}}
+            <span class="badge">{{project.stars}}</span> {{project.name}}
         </a>
     </li>
 </ul>
