--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,4 +1,7 @@
 <h2>Your Projects</h2>
+<mat-spinner strokeWidth="3"
+             [diameter]="50"
+             *ngIf="areProjectsFetched === false"></mat-spinner>
 <ul class="projects">
     <li *ngFor="let project of projects">
         <a routerLink="/detail/{{project.id}}">
