--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,4 +1,5 @@
 <h2>Your Projects</h2>
+<div *ngIf="areProjectsFetched === false">Loading...</div>
 <mat-spinner strokeWidth="3"
              [diameter]="50"
              *ngIf="areProjectsFetched === false"></mat-spinner>
