Able to create sample card using angular-material-card component

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -10,3 +10,19 @@
         </a>
     </li>
 </ul>
+<mat-card class="project-card">
+    <mat-card-header>
+        <div mat-card-avatar class="project-image"></div>
+        <mat-card-title>Emacs</mat-card-title>
+    </mat-card-header>
+    <img mat-card-image
+          src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        <mat-card-content>
+            <p>
+                This is the awesomest project in the world
+            </p>
+        </mat-card-content>
+        <mat-card-actions>
+            <button mat-button>Star</button>
+        </mat-card-actions>
+</mat-card>
