added max-width css property to div that reduced the image size

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -10,9 +10,9 @@
         </a>
     </li>
 </ul>
-<mat-card class="project-card">
+<mat-card 
+    class="project-card">
     <mat-card-header>
-        <div mat-card-avatar class="project-image"></div>
         <mat-card-title>Emacs</mat-card-title>
     </mat-card-header>
     <img mat-card-image
