--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -10,19 +10,21 @@
         </a>
     </li>
 </ul>
-<mat-card 
-    class="project-card">
-    <mat-card-header>
-        <mat-card-title>Emacs</mat-card-title>
-    </mat-card-header>
-    <img mat-card-image
-          src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+<div class="project-cards-holder">
+    <mat-card *ngFor="let project of projects"
+              class="project-card">
+        <mat-card-header>
+            <mat-card-title>{{project.name}}</mat-card-title>
+        </mat-card-header>
+        <img mat-card-image
+        src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
         <mat-card-content>
             <p>
-                This is the awesomest project in the world
+                {{project.description}}
             </p>
         </mat-card-content>
         <mat-card-actions>
-            <button mat-button>Star</button>
+            <button mat-button>Stars {{project.stars}}</button>
         </mat-card-actions>
-</mat-card>
+    </mat-card>
+</div>
