--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -17,7 +17,7 @@
             <mat-card-title>{{project.name}}</mat-card-title>
         </mat-card-header>
         <img mat-card-image
-        src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        src={{project.avatar}} alt="Photo of a Shiba Inu">
         <mat-card-content>
             <p>
                 {{project.description}}
