--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -1,69 +1,76 @@
 /* ProjectsComponent's private CSS styles */
-.projects {
-  margin: 0 0 2em 0;
-  list-style-type: none;
-  padding: 0;
-  width: 15em;
-}
-.projects li {
-  position: relative;
-  cursor: pointer;
-  background-color: #EEE;
-  margin: .5em;
-  padding: .3em 0;
-  height: 1.6em;
-  border-radius: 4px;
+
+@media only screen and (min-width: 500px) {
+    .project-cards-holder {
+        grid-template-columns: 1fr 1fr;
+    }  
+    .item-1 {
+        grid-column: 1/ span 2;
+    }
+    .item-1 h1 {
+        font-size: 30px;
+    }
 }
 
-.projects li:hover {
-  color: #607D8B;
-  background-color: #DDD;
-  left: .1em;
-}
-
-.projects a {
-  color: #888;
-  text-decoration: none;
-  position: relative;
-  display: block;
-  width: 250px;
-}
-
-.projects a:hover {
-  color:#607D8B;
-}
-
-.projects .badge {
-  display: inline-block;
-  font-size: small;
-  color: white;
-  padding: 0.8em 0.7em 0 0.7em;
-  background-color: #607D8B;
-  line-height: 1em;
-  position: relative;
-  left: -1px;
-  top: -4px;
-  height: 1.8em;
-  min-width: 16px;
-  text-align: right;
-  margin-right: .8em;
-  border-radius: 4px 0 0 4px;
+@media only screen and (min-width: 850px) {
+    .project-cards-holder {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
 }
 
 .project-cards-holder {
+    width: 90%;
+    max-width: 1240px;
+    margin: 0 auto;
+    
+    display: grid;
+    
+    /* grid-template-columns: 1fr; */
+    grid-template-rows: auto;
+    grid-gap: 20px;
+}
+
+.project-card {
+    min-height: 100%;
+    background: white;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
+    text-decoration: none;
+    color: #444;
+    position: relative;
+    top: 0;
+    transition: all .1s ease-in
 }
 
-.project-card-wrapper {
-    max-width: 16%;
-    min-width: 16%;
-    margin: 2%;
-    flex-basis: 16%;
-    box-sizing: border-box;
-    /* height: 250px; */
+.project-card .project-image {
+    padding-bottom: 60%;
+    background-size: cover;
+    background-position: center center;
 }
 
+.project-card article {
+    padding: 20px;
+    display: flex;
+    
+    flex: 1;
+    justify-content: space-between;
+    flex-direction: column;  
+}
+
+.project-card p {
+    flex: 1; /* make p grow to fill available space*/
+    line-height: 1.4;
+}
+
+.project-card span {
+    font-size: 12px;
+    font-weight: bold;
+    color: #999;
+    text-transform: uppercase;
+    letter-spacing: .05em;
+    margin: 2em 0 0 0;
+}
 /* .project-name { */
 /*     height: 20%; */
 /* } */
