added a header component

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -6,7 +6,7 @@
     </svg>
 </div>
 <div *ngIf="areProjectsFetched">
-    <h2>Your Projects</h2>
+    <h2>Your Contributions</h2>
     <div class="project-cards-holder">
         <div class="project-1"
              *ngFor="let project of projects">
