--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <!-- <h1>{{title}}</h1>
 <nav>
     <a routerLink="/projects">Projects</a>
-</nav> -->
+     </nav> -->
+<app-header></app-header>
 <router-outlet></router-outlet>
