moved header code into a component

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,6 @@
-<p>
-  header works!
-</p>
+<div class="header">
+    <a><h2>Open Show Off</h2></a>
+    <div class="header-right">
+        <a><h2>Source</h2></a>
+    </div>
+</div>
