--- a/src/styles.css
+++ b/src/styles.css
@@ -2,51 +2,9 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
 * {box-sizing: border-box;} 
-.header {
-    /* Why did height change with overflow */
-    overflow: hidden;
-    background-color: #f1f1f1;
-    padding: 0px 10px;
-}
 
-.header a {
-    float: left;
-    color: #369;
-    text-align: center;
-    padding: 2px;
-    text-decoration: none;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 120%;
-    border-radius: 4px;
-}
 
-.header a.logo {
-    font-size: 200%;
-    font-weight: bold;
-}
-
-.header a:hover {
-    background-color: #ddd;
-    color: black;
-}
-
-.header-right {
-    float: right;
-}
-
-@media screen and (max-width: 500px) {
-    .header a {
-        float: none;
-        display: block;
-        text-align: left;
-    }
-    
-    .header-right {
-        float: none;
-    }
-}
-
-h1 {
+h1, h2 {
     color: #369;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 150%;
