added links to home and github

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="header">
-    <a><h2>Open Show Off</h2></a>
+    <a href="/"><h2>Open Show Off</h2></a>
     <div class="header-right">
-        <a><h2>Source</h2></a>
+        <a href="https://github.com/s-surineni/open-show-off"><h2>Source</h2></a>
     </div>
 </div>
